force-app/main/default/objects/MessagingSession/fields/AgenteSDR__c.field-meta.xml
<CustomField>
    <fullName>AgenteSDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agente SDR</label>
    <type>Checkbox</type>
</CustomField>