force-app/main/default/objects/MessagingSession/fields/ConversationStatus__c.field-meta.xml
<CustomField>
    <fullName>ConversationStatus__c</fullName>
    <label>Conversation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting Customer</fullName>
            </value>
            <value>
                <fullName>Waiting Agent</fullName>
            </value>
            <value>
                <fullName>Waiting Agent - Manager Notified</fullName>
            </value>
            <value>
                <fullName>Waiting Agent - Transfered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>