force-app/main/default/objects/MessagingSession/fields/EndUserAccountId__c.field-meta.xml
<CustomField>
    <fullName>EndUserAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta do Envio de mensagens ao usuário</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sessões do Messaging</relationshipLabel>
    <relationshipName>MessagingSessions2</relationshipName>
    <type>Lookup</type>
</CustomField>