force-app/main/default/objects/MessagingSession/fields/LastMessageAgent__c.field-meta.xml
<CustomField>
    <fullName>LastMessageAgent__c</fullName>
    <label>Last Message Agent</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>