force-app/main/default/objects/MessagingSession/fields/LastResponseDate__c.field-meta.xml
<CustomField>
    <fullName>LastResponseDate__c</fullName>
    <label>LastResponseDate</label>
    <type>DateTime</type>
</CustomField>