force-app/main/default/objects/MessagingSession/fields/NotifyN1__c.field-meta.xml
<CustomField>
    <fullName>NotifyN1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N1 Notificado</label>
    <type>Checkbox</type>
</CustomField>