force-app/main/default/objects/MessagingSession/fields/NotifyN2__c.field-meta.xml
<CustomField>
    <fullName>NotifyN2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N2 Notificado</label>
    <type>Checkbox</type>
</CustomField>