force-app/main/default/objects/MessagingSession/fields/NotifyN3__c.field-meta.xml
<CustomField>
    <fullName>NotifyN3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N3 Notificado</label>
    <type>Checkbox</type>
</CustomField>