force-app/main/default/objects/MessagingSession/fields/OwnerAssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>OwnerAssignmentDate__c</fullName>
    <label>Data de Atribuição do Owner</label>
    <type>DateTime</type>
</CustomField>