force-app/main/default/objects/MessagingSession/fields/OwnerChanged__c.field-meta.xml
<CustomField>
    <fullName>OwnerChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Changed</label>
    <type>Checkbox</type>
</CustomField>