force-app/main/default/objects/MessagingSession/fields/QueueN1__c.field-meta.xml
<CustomField>
    <fullName>QueueN1__c</fullName>
    <label>Fila N1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MessagingSessionRoles</valueSetName>
    </valueSet>
</CustomField>