force-app/main/default/objects/MessagingSession/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <formula>MessagingEndUser.Telefone_Formatado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>