force-app/main/default/objects/MessagingSession/listViews/Assist_ncia_tecnica_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Assist_ncia_tecnica_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Assistência tecnica</label>
    <queue>Assistencia_tecnica</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>