force-app/main/default/objects/MessagingSession/listViews/Atendimento_ao_Cliente_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Atendimento_ao_Cliente_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento ao Cliente</label>
    <queue>Atendimento_ao_Cliente</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>