force-app/main/default/objects/MessagingSession/listViews/Ativos.listView-meta.xml
<ListView>
    <fullName>Ativos</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>PlatformType</columns>
    <columns>ChannelName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Ativos</label>
</ListView>