force-app/main/default/objects/MessagingSession/listViews/Chat_Enerzee_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Chat_Enerzee_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Enerzee</label>
    <queue>Chat_Enerzee</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>