force-app/main/default/objects/MessagingSession/listViews/Chat_Routing_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Chat_Routing_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Routing</label>
    <queue>Chat_Routing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>