force-app/main/default/objects/MessagingSession/listViews/Comercial_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Comercial_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Comercial</label>
    <queue>Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>