force-app/main/default/objects/MessagingSession/listViews/Contratos_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Contratos_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Contratos</label>
    <queue>Contratos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>