force-app/main/default/objects/MessagingSession/listViews/Ezee_Solar_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Ezee_Solar_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Ezee Solar</label>
    <queue>Proposta_Ezee_Solar</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>