force-app/main/default/objects/MessagingSession/listViews/Financeiro_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Financeiro_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Financeiro</label>
    <queue>Financeiro</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>