force-app/main/default/objects/MessagingSession/listViews/MinhasMensagensAtivas.listView-meta.xml
<ListView>
    <fullName>MinhasMensagensAtivas</fullName>
    <columns>MessagingEndUser</columns>
    <columns>Telefone__c</columns>
    <columns>StartTime</columns>
    <columns>Case</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>EndTime</columns>
    <columns>PlatformType</columns>
    <columns>ChannelName</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Minhas mensagens ativas</label>
</ListView>